--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,7 @@ header { /* (1) Cabeçalho / Título / Menu */
 }
 
 header h1 { 
-    font-size: 4rem;
+    font-size: 4.2rem;
     margin-bottom: 10px;
     color: #542362;
 }
@@ -31,7 +31,7 @@ body {  /* Corpo da página. Exceção body e footer */
 }
 
 #intro { /* (introduction) */
-    background-color: #542362;
+    background: radial-gradient(circle, #542362, #9b3c81);
     padding: 10px 0;
     text-align: center;
 
@@ -55,14 +55,28 @@ body {  /* Corpo da página. Exceção body e footer */
     margin: 0 auto; /* define o preenchimento externo (fora do conteúdo) do container. 0 auto; aplica margens automáticas*/
     margin-top: 30px;
     padding-top: 0px;
-    padding-bottom: 80px; /*define o preenchimento interno do container (onde fica todo o conteúdo)*/
+    padding-bottom: 40px; /*define o preenchimento interno do container (onde fica todo o conteúdo)*/
+}
+
+.container p { /* (2) */
+    font-size: 1.8rem;
+    color: rgba(0, 0, 0, 0.788);
+    margin-bottom: 30px;
+    font-weight: bold
 }
 
 .container-2 {  /* primeira parte (introduction)*/
     width: 80%; /* percentual da largura que o container vai ocupar na tela*/
     max-width: 1200px; /* define a largura maxima que o container pode ter mesmo que o container pai ultrapasse essa largura*/
     margin: 0 auto; /* define o preenchimento externo (fora do conteúdo) do container. 0 auto; aplica margens automáticas*/
-    padding: 10px; /*define o preenchimento interno do container (onde fica todo o conteúdo)*/
+    padding: 50px; /*define o preenchimento interno do container (onde fica todo o conteúdo)*/
+}
+
+.container-2 h2 { /* (2) */
+    font-size: 1.8rem;
+    color: rgba(0, 0, 0, 0.788);
+    margin-bottom: 50px;
+    font-weight: bold
 }
 
 .container-2 p { /* (2) */
@@ -82,12 +96,13 @@ body {  /* Corpo da página. Exceção body e footer */
 
 .btn { /* (2) */
     display: inline-block;
-    background-color: #333;
+    background-color: #2dad06;
     color: #fff;
     padding: 10px 20px;
     text-decoration: none;
     border-radius: 5px;
     transition: background-color 0.05s ease;
+    font-weight: bold
 }
 
 .btn:hover { /* (2) */
