--- a/styles.css
+++ b/styles.css
@@ -6,23 +6,23 @@
 }
 
 header { /* (1) Cabeçalho / Título / Menu */
-    background-color: #333;
+    background-color: #ffffff;
     color: #fff;
     text-align: center;
-    background-color: white;
-    padding-top: 0px;
+    background-color: rgb(0, 0, 0);
+    padding-top: 10px;
     padding-bottom: 0px;
     margin-top: 0px;
 }
 
 header h1 { 
-    font-size: 3rem;
+    font-size: 2.0rem;
     margin-bottom: 5px;
-    color: #525252;
+    color: #ffffffef;
 }
 
 header h2 {
-    color: #542362;
+    color: #525252;
     margin-left: -80px;
 }
 h1, h2 {
@@ -39,10 +39,11 @@ body {  /* Corpo da página. Exceção body e footer */
     background: linear-gradient(to bottom, #542362, #9b3c81);
     margin: 0 auto;
     padding-top: 20px;
-    padding-bottom: 10px;
+    padding-bottom: 50px;
 }
+
 .home{
-    background: linear-gradient(to bottom, #ffffff, #ffffff);
+    background: linear-gradient(to bottom, #ffffff, #eeeeee6c);
     width:470px;
     height: 470px;
     margin: -0 auto;
@@ -59,16 +60,21 @@ body {  /* Corpo da página. Exceção body e footer */
 }
 
 .caracteristicas {
-    margin: 0 auto;
     padding-top: 20px;
-    font-size: 20px;
     text-align: center;
-    line-height: 3;
     color: #fff;
+    padding-left: 200px; 
+    padding-right: 200px;
 }
-
-.caracteristicas .item{
-    line-height: 3;
+.caracteristicas h2 {
+    color: #000000;
+    margin: 0 auto;
+    padding-inline: 4.2%;
+    margin-bottom: 5px;
+    background-color: #ffffff;
+    font-size: 25px;
+    border-radius: 10px; /* Arredondar os cantos */
+    text-align: center;
 }
 
 #video{
