--- a/styles.css
+++ b/styles.css
@@ -39,28 +39,28 @@ body {  /* Corpo da página. Exceção body e footer */
     background: linear-gradient(to bottom, #542362, #9b3c81);
     margin: 0 auto;
     padding-top: 20px;
-    padding-bottom: 50px;
+    padding-bottom: 40px;
 }
 
 .home{
     background: linear-gradient(to bottom, #ffffff, #eeeeee6c);
-    width:470px;
-    height: 470px;
+    width:395px;
+    height: 400px;
     margin: -0 auto;
     padding: 50px;
     text-align: center;
-    border: 0px; background-color: #fff;
-    border-radius: 5000px; /* Arredondar os cantos */
+    border: 0px; background-color: #ffffffd0;
+    border-radius: 100px; /* Arredondar os cantos */
     box-shadow: 0 0 20px 2px rgba(199, 198, 198, 0.8);
 }
 
 #home img{
-    margin-left: -50px;
-    margin-top: -83px;
+    margin-left: -100px;
+    margin-top: -85px;
 }
 
 .caracteristicas {
-    padding-top: 20px;
+    padding-top: 30px;
     text-align: center;
     color: #fff;
     padding-left: 200px; 
@@ -70,11 +70,36 @@ body {  /* Corpo da página. Exceção body e footer */
     color: #000000;
     margin: 0 auto;
     padding-inline: 4.2%;
-    margin-bottom: 5px;
+    margin-bottom: 15px;
     background-color: #ffffff;
     font-size: 25px;
     border-radius: 10px; /* Arredondar os cantos */
     text-align: center;
+}
+
+.caracteristicas p{
+    line-height: 3;
+    text-align: center;
+    font-weight: bold
+
+}
+
+.caracteristicas .btn{
+    margin-top: 40px;
+    animation: pulsar 0.95s infinite;
+
+}
+
+@keyframes pulsar {
+    0% {
+        transform: scale(1); /* Tamanho normal */
+    }
+    50% {
+        transform: scale(1.1); /* Cresce para 110% */
+    }
+    100% {
+        transform: scale(1); /* Volta ao tamanho normal */
+    }
 }
 
 #video{
@@ -150,17 +175,20 @@ body {  /* Corpo da página. Exceção body e footer */
 
 .btn { /* (2) */
     display: inline-block;
-    background-color: #2dad06;
-    color: #fff;
+    background-color: #48b02c;
+    color: #ffffff;
     padding: 10px 20px;
     text-decoration: none;
     border-radius: 5px;
     transition: background-color 0.05s ease;
-    font-weight: bold
+    font-weight: bold;
+    letter-spacing: 1px;
+    font-family:'Arial';
+    animation: pulsar 0.95s infinite;
 }
 
 .btn:hover { /* (2) */
-    background-color: #555;
+    background-color: #4dd427;
 }
 
 #features { /* (3) */
