--- a/styles.css
+++ b/styles.css
@@ -16,14 +16,16 @@ header { /* (1) Cabeçalho / Título / Menu */
 }
 
 header h1 { 
-    font-size: 2.0rem;
+    font-size: 30px;
     margin-bottom: 5px;
     color: #ffffffef;
+    letter-spacing: 1.5px; 
 }
 
 header h2 {
     color: #525252;
     margin-left: -80px;
+    letter-spacing: 1.5px;
 }
 h1, h2 {
     display: inline-block;
@@ -38,7 +40,7 @@ body {  /* Corpo da página. Exceção body e footer */
 #home{
     background: linear-gradient(to bottom, #542362, #9b3c81);
     margin: 0 auto;
-    padding-top: 20px;
+    padding-top: 40px;
     padding-bottom: 40px;
 }
 
@@ -69,18 +71,21 @@ body {  /* Corpo da página. Exceção body e footer */
 .caracteristicas h2 {
     color: #000000;
     margin: 0 auto;
-    padding-inline: 4.2%;
+    padding-inline: 0.8%;
     margin-bottom: 15px;
     background-color: #ffffff;
-    font-size: 25px;
+    font-size: 30px;
     border-radius: 10px; /* Arredondar os cantos */
     text-align: center;
+    letter-spacing: 1.5px;
 }
 
 .caracteristicas p{
-    line-height: 3;
+    line-height: 3.5;
     text-align: center;
-    font-weight: bold
+    font-weight: bold;
+    font-size: 1.2rem;
+    letter-spacing: 1px;
 
 }
 
@@ -111,68 +116,56 @@ body {  /* Corpo da página. Exceção body e footer */
 
 #intro { /* (introduction) */
     background: linear-gradient(to bottom, #542362, #9b3c81);
-    padding: 10px 0;
     text-align: center;
-
+    padding-bottom: 50px;
+    padding-top: 0px;
 }
 
 #intro h2 { /* (introduction) */
-    font-size: 2.5rem;
+    font-size: 30px;
     margin-bottom: 20px;
     color: white;
+    padding-top: 50px;
+    letter-spacing: 1.5px;
 }
 
 #intro p { /* (introduction) */
-    font-size: 1.8rem;
+    font-size: 1.2rem;
     color: white;
     margin-bottom: 30px;
+    padding-inline: 20%;
+    letter-spacing: 1px;
 }
 
-.container {  /* primeira parte (introduction)*/
+#container {  /* primeira parte (introduction)*/
     width: 80%; /* percentual da largura que o container vai ocupar na tela*/
     max-width: 1200px; /* define a largura maxima que o container pode ter mesmo que o container pai ultrapasse essa largura*/
     margin: 0 auto; /* define o preenchimento externo (fora do conteúdo) do container. 0 auto; aplica margens automáticas*/
-    margin-top: 30px;
-    padding-top: 0px;
-    padding-bottom: 40px; /*define o preenchimento interno do container (onde fica todo o conteúdo)*/
-}
-
-.container p { /* (2) */
-    font-size: 1.8rem;
+    padding-top: 50px;
+    padding-bottom: 50px; /*define o preenchimento interno do container (onde fica todo o conteúdo)*/
     color: rgba(0, 0, 0, 0.788);
-    margin-bottom: 30px;
-    font-weight: bold
+    text-align: center;
 }
-
-.container-2 {  /* primeira parte (introduction)*/
-    width: 80%; /* percentual da largura que o container vai ocupar na tela*/
-    max-width: 1200px; /* define a largura maxima que o container pode ter mesmo que o container pai ultrapasse essa largura*/
-    margin: 0 auto; /* define o preenchimento externo (fora do conteúdo) do container. 0 auto; aplica margens automáticas*/
-    padding: 50px; /*define o preenchimento interno do container (onde fica todo o conteúdo)*/
-}
-
-.container-2 h2 { /* (2) */
-    font-size: 1.8rem;
+#container h2 { /* (2) */
+    font-size: 30px;
     color: rgba(0, 0, 0, 0.788);
-    margin-bottom: 50px;
-    font-weight: bold
+    margin-bottom: 10px;
+    font-weight: bold;
+    letter-spacing: 1.5px;
 }
-
-.container-2 p { /* (2) */
-    font-size: 1.8rem;
+#container p { /* (2) */
+    font-size: 1.2rem;
     color: rgba(0, 0, 0, 0.788);
-    margin-bottom: 30px;
-    font-weight: bold
+    margin-bottom: 10px;
+    font-weight: bold;
+    line-height: 3;
+    letter-spacing: 1.2px;
 }
-
 
 .highlight { /* */
     color:#ff9600; /* Escolha a cor que você deseja */
   }
   
-
-
-
 .btn { /* (2) */
     display: inline-block;
     background-color: #48b02c;
@@ -191,30 +184,7 @@ body {  /* Corpo da página. Exceção body e footer */
     background-color: #4dd427;
 }
 
-#features { /* (3) */
-    background-color: #f9f9f9;
-    padding: 50px 0;
-    text-align: center;
-}
 
-#features h2 { /* (3) */
-    font-size: 2rem;
-    margin-bottom: 20px;
-}
-
-.feature-item { /* (3) */
-    margin-bottom: 30px;
-}
-
-.feature-item h3 { /* (3) */
-    font-size: 1.5rem;
-    margin-bottom: 10px;
-}
-
-.feature-item p { /* (3) */
-    font-size: 1.1rem;
-    color: #666;
-}
 
 #testimonials { /* (4) */
     padding: 50px 0;
