--- a/styles.css
+++ b/styles.css
@@ -118,16 +118,31 @@ header h1 {  /*existe*/
 
 .chamada { /*existe*/
     font-size: 25px;
-    font-weight: 0;
-    font-weight: 600;
-    line-height: 1.5;
 }
 
+.best-seller {
+    background-color: black;
+    color:#ffffff;
+    padding-top: 65px;
+    padding-bottom: 65px;
+    font-family: 'Roboto', 'Poppins', sans-serif;
+    font-weight: 1000;
+    display: flex;
+    justify-content: center;
+    
+}
 
 #section-depoimentos { /*existe*/
     text-align: center;
     margin-bottom: 40px;
     margin-top: 40px;
+}
+
+#section-depoimentos h2 { /*existe*/
+    padding-top: 20px;
+    padding-bottom: 60px;
+    font-family: 'Roboto', 'Poppins', sans-serif;
+    font-weight: 1000;
 }
 
 .depoimentos-ind  { /*existe*/
