--- a/styles.css
+++ b/styles.css
@@ -134,24 +134,34 @@ header h1 {  /*existe*/
 
 #section-depoimentos { /*existe*/
     text-align: center;
-    margin-bottom: 40px;
-    margin-top: 40px;
+    margin-bottom: 60px;
+    margin-top: 20px;
+    
+    
 }
 
 #section-depoimentos h2 { /*existe*/
+    width: 50%; 
+    max-width: 1200px;
+    margin: 0 auto;
+    color: rgba(0, 0, 0, 0.788);
     padding-top: 20px;
-    padding-bottom: 60px;
+    margin-bottom: 60px;
+    padding-bottom: 10px;
+    border-bottom: 1px solid #ddd;
     font-family: 'Roboto', 'Poppins', sans-serif;
     font-weight: 1000;
 }
 
 .depoimentos-ind  { /*existe*/
+    color: rgba(0, 0, 0, 0.788);
     font-size: 14px;
     padding: 0%;
     text-align: left;
     display: inline-block;
     padding-inline: 30px;
     margin-inline: 20px;
+    padding-bottom: 30px;
 }
 
 .depoimentos p { /*existe*/
@@ -168,20 +178,27 @@ header h1 {  /*existe*/
 
 
 #container { /*existe*/
-    width: 80%; 
+    width: 50%; 
     max-width: 1200px;
     margin: 0 auto;
-    padding-top: 50px;
+    padding-top: 0px;
     padding-bottom: 50px;
     color: rgba(0, 0, 0, 0.788);
     text-align: center;
 }
+
+#container img {
+    vertical-align: middle;
+    margin-right: 5px;
+}
 #container h2 { /*existe*/
-    font-size: 20px;
-    color: rgba(0, 0, 0, 0.788);
-    margin-bottom: 10px;
-    font-weight: bold;
-    letter-spacing: 1.5px;
+    margin-bottom: 20px;
+    color: color rgba(0, 0, 0, 0.788);
+    padding-bottom: 10px;
+    border-bottom: 1px solid #ddd;
+    font-family: 'Roboto', 'Poppins', sans-serif;
+    font-weight: 1000;
+    
 }
 #container p { /*existe*/
     font-size: 1.2rem;
@@ -211,7 +228,7 @@ header h1 {  /*existe*/
 
 .testimonial { /* (4) */
     background-color: #fff;
-    border: 1px solid #ddd;
+    border-bottom: 1px solid #ddd;
     padding: 20px;
     margin-bottom: 20px;
 }
