--- a/styles.css
+++ b/styles.css
@@ -32,7 +32,7 @@ header h1 {  /*existe*/
     font-weight: 1000;
     font-size: 25px;
     line-height: 1.5;
-    text-align: justify;
+    text-align: center;
 }
 
 #home { /*existe*/
